crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__trace.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unIData (iData (trace "before" in 42))
--- unoptimized UPLC
(program 1.1.0
  [(builtin unIData)
    [(builtin iData)
      (force
        [[(force (builtin trace)) (con string "before")] (delay (con integer 42))])]])
--- optimized Core
trace "before" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "before")] (delay (con integer 42))]))
    (force (builtin trace))])
--- isolated pass
--- core before
unIData (iData (trace "before" in 42))
--- uplc before
(program 1.1.0
  [(builtin unIData)
    [(builtin iData)
      (force
        [[(force (builtin trace)) (con string "before")] (delay (con integer 42))])]])
--- core after
trace "before" in 42
--- uplc after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "before")] (delay (con integer 42))]))
--- result
(con integer 42)
--- logs
["before"]
