crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__unknown_invalid.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
(\x#1 : int -> unIData (iData x#1)) true
--- unoptimized UPLC
(program 1.1.0
  [(lam x_1 [(builtin unIData) [(builtin iData) x_1]]) (con bool True)])
--- optimized Core
let anf#3 : Data = iData true in
unIData anf#3
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 [(builtin unIData) anf_1]) [(builtin iData) (con bool True)]])
--- isolated pass
--- core before
(\x#1 : int -> unIData (iData x#1)) true
--- uplc before
(program 1.1.0
  [(lam x_1 [(builtin unIData) [(builtin iData) x_1]]) (con bool True)])
--- core after
(\x#1 : int -> unIData (iData x#1)) true
--- uplc after
(program 1.1.0
  [(lam x_1 [(builtin unIData) [(builtin iData) x_1]]) (con bool True)])
--- result
error: Runtime(TypeMismatch(Integer, Boolean(true)))
--- logs
[]
